Better CSS for images Change images slightly Improve CREDITS.md slightly

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Allyce's Website"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://allytoall.github.io/thumbnails/index.png"/>
-    <meta property="og:url" content="https://allytoall.github.io/"/>
-    <meta property="og:description" content="Allyce's Silly Little Website :3"/>
+    <meta content="Allyce's Website" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+    <meta content="https://allytoall.github.io/" property="og:url"/>
+    <meta content="Allyce's Silly Little Website :3" property="og:description"/>
     <title>Allyce</title>
-    <link rel="stylesheet" href="/output.css">
+    <link href="/output.css" rel="stylesheet">
     <script src="/urlHandling.js"></script>
 </head>
 <body class="background">
@@ -18,7 +18,7 @@
     </h1>
     <a href="https://en.pronouns.page/@Allyce">
         <button class="btn pronoun">
-            <img alt="" src="https://simpleicons.org/icons/pronounsdotpage.svg">
+            <img alt="" class="invert" src="/thumbnails/pronounsdotpage.svg">
             Personal
         </button>
     </a>
@@ -27,11 +27,11 @@
         <b>Interests</b>
     </p><a href="/games">
     <button class="btn white">
-        <img src="/thumbnails/controller.png" alt=""> Games
+        <img alt="" class="invert" src="/thumbnails/controller.png"> Games
     </button>
 </a><br><a href="https://github.com/AllyToAll/AllyToAll.github.io">
     <button class="btn github">
-        <img alt="" src="https://simpleicons.org/icons/github.svg">
+        <img alt="" class="invert" src="/thumbnails/github.svg">
         Programming
     </button>
 </a><br><br>
@@ -39,22 +39,27 @@
         <b>Political Views</b>
     </p><a href="https://en.wikipedia.org/wiki/Anarchist_synthesis">
     <button class="btn white">
+        <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Anarchist Synthesis
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Social_anarchism">
     <button class="btn white">
+        <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Social Anarchism
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Anarchist_communism">
     <button class="btn white">
+        <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Anarcho Communism
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Queer_anarchism">
     <button class="btn white">
+        <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Queer Anarchism
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Anarcha-feminism">
     <button class="btn white">
+        <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Anarcha Feminism
     </button>
 </a><br><br>
@@ -62,23 +67,25 @@
         <b>Phisophical Views</b>
     </p><a href="https://en.wikipedia.org/wiki/Scientism">
     <button class="btn white">
+        <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Scientism 🧑‍🔬
     </button>
 </a><br><br>
     <a href="/thumbnails/pfp.jpg">
         <button class="btn gray">
+            <img alt="" src="/thumbnails/pfp.jpg">
             <b>Symbols on my profile picture</b>
         </button>
     </a>
     <a href="https://en.wikipedia.org/wiki/Industrial_Workers_of_the_World">
         <button class="btn white">
-            <img src="/thumbnails/IWW-The-Black-Cat-Sabo-Tabby.webp" alt=""/>
+            <img alt="" class="invert" src="/thumbnails/IWW-The-Black-Cat-Sabo-Tabby.webp"/>
             Sabotabby
         </button>
     </a><br><a
         href="https://en.wikipedia.org/wiki/International_Revolutionary_People's_Guerrilla_Forces#The_Queer_Insurrection_and_Liberation_Army">
     <button class="btn white">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 76200 50800">
+        <svg class="invert" viewBox="0 0 76200 50800" xmlns="http://www.w3.org/2000/svg">
             <path d="M38100 5953.125a6086.977 6085.417 0 0 1 0 12170.833 6086.977 6085.417 0 0 1 0-12170.833zm-1542.034 6004.277h3084.068L38100 8650.993Zm3692.766 1298.223h-4301.464l-1085.511 2322.6a4798.567 4797.337 0 0 0 6472.486 0zm-1339.135-5933.282 3327.547 7140.223a4798.567 4797.337 0 0 0-3327.547-7140.223Zm-1623.194 0a4798.567 4797.337 0 0 0-3327.548 7140.223zm32548.365 18317.576c-434.631-67.179-1039.244-369.485-1222.457-855.006h-712.504v117.054h-142.502v-184.232h-264.644v-183.217h-209.68v-2499.875c0-104.839-84.484-189.322-190.341-189.322h-830.578c-104.841 0-189.322 84.483-189.322 189.322v605.63l-999.543 2077.462v184.232h-4315.746v-157.769c-1288.619 0-1840.299-999.542-2236.248-1736.475H53919.4v-131.305h-1026.006v-21.376c0-103.821-84.484-189.322-188.307-189.322h-162.859c-24.429-76.341-94.66-131.305-179.141-131.305l-6750.479-210.698c-64.127 0-119.091 31.554-153.699 78.376h-242.25c-104.841 0-189.325 86.519-189.325 190.34v73.287h-393.914v-440.736c0-105.857-84.482-190.341-189.32-190.341h-958.829c-18.322-89.572-97.716-157.769-193.395-157.769-86.518 0-158.787 54.965-186.269 131.305h-2378.75c-15.269-21.375-39.698-35.624-67.177-35.624h-363.382c-27.479 0-51.908 14.249-66.159 35.624h-122.145v-65.144l-197.464-131.304v289.074h303.324v133.341c0 45.803 37.661 83.464 82.444 83.464h81.431v60.054c0 18.321 15.269 31.554 31.554 31.554h11.197c-60.055 11.196-99.75 36.643-122.144 73.286h-110.948v499.771H25507.746s-185.251-57-342.002 25.448c-156.752 83.464-263.627 184.232-263.627 184.232l-602.577 684.005h-344.038l-315.538 447.86h265.663l-507.915 578.147h-257.52l8.143 81.43c-691.13 47.839-3948.296 659.576-4428.728 760.345-499.772 105.858-973.079 158.786-1368.01 0-393.913-157.769-947.631-447.861-1761.924-367.449-815.31 78.376-8787.225 947.632-8893.083 1183.776-13.232 30.535-27.483 57.001-42.75 81.43-24.43-68.198-70.233-117.054-141.484-81.43-119.09 60.054-236.144 157.769-103.822 816.328 130.287 657.541 709.452 5129.019 735.916 5576.88 25.447 446.842 290.092 474.324 393.914 394.931-3.054-18.321-5.09-37.661-8.143-57 97.715 36.643 255.484 33.589 507.914-75.322 553.719-236.145 14838.431-5103.573 15417.595-5287.807l578.147-22.392v279.912c0 71.25 40.715 133.341 97.715 165.912l-18.321-2.035c-79.394 236.145-131.305 499.772 104.84 841.775 237.162 342.002 105.858 894.702-51.911 1394.474-158.787 499.771-684.005 1973.641-1026.008 2841.878-342.002 868.239 25.446 1183.777 315.538 1419.921 288.056 236.144 1314.064 393.913 1894.246 263.627 578.148-131.305 578.148-527.254 578.148-631.076 0-105.857 0-394.931 79.393-658.559 78.376-263.626 1183.777-2815.413 1394.474-3315.184 201.538-482.469 453.969-743.042 732.863-974.097 317.574 505.879 630.058 762.381 1029.061 763.399 396.968 0 1343.581-25.447 1948.193-25.447 537.432 0 869.256-325.717 1048.4-684.005h507.914l73.288 183.215-78.377 684.005 130.288 52.93 254.464-920.15h30.539c104.838 0 189.322-85.501 189.322-189.323v-1145.098h245.306v368.468h460.073c611.738 3776.278 2698.359 8157.166 7714.396 11199.563l260.575-412.235 1474.885-2325.82 499.772-787.827c-4059.246-2773.683-5432.346-6023.724-5869.009-8962.299l3476.008-141.483v-3.054c0 103.823 84.485 189.323 188.304 189.323h521.148v73.286c0 103.823 84.484 188.306 189.322 188.306 0 0 469.236 0 752.203-54.966 285.001-57 1162.402-338.949 1400.582-390.86 236.143-53.946 709.451-80.411 1104.382-80.411 393.914 0 6624.264-209.68 6624.264-209.68 73.284 0 137.411-43.769 167.947-105.859h226.983c49.877 0 95.679-19.337 129.27-51.909h191.358v-316.557h5313.254v132.322h474.323v-132.322h7603.448v105.857h526.238v-372.538c35.623 29.519 63.108 68.197 73.287 108.912h242.25v-315.539h500.79v-156.751h142.502v130.287H69850v-290.091c-3.053 0-6.107 2.035-13.232 2.035z"/>
         </svg>
 
@@ -86,16 +93,17 @@
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Three_Arrows">
     <button class="btn white">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="236.5 0 607 607" preserveAspectRatio="xMidYMid meet">
-            <rect x="236.5" y="0" width="607" height="607" fill="black"/>
+        <svg class="invert" preserveAspectRatio="xMidYMid meet" viewBox="236.5 0 607 607"
+             xmlns="http://www.w3.org/2000/svg">
+            <rect fill="black" height="607" width="607" x="236.5" y="0"/>
             <g transform="translate(0,607) scale(0.1,-0.1)">
-                <path fill="white" d="M0 3035 l0 -3035 5400 0 5400 0 0 3035 0 3035 -5400 0 -5400 0 0
+                <path d="M0 3035 l0 -3035 5400 0 5400 0 0 3035 0 3035 -5400 0 -5400 0 0
 -3035z m5605 2345 c570 -56 1079 -290 1483 -685 293 -285 493 -604 617 -983
 89 -269 120 -497 112 -811 -7 -312 -55 -550 -167 -833 -267 -674 -872 -1219
 -1578 -1423 -261 -75 -386 -90 -722 -90 -220 1 -273 4 -383 24 -687 121 -1263
 496 -1642 1066 -126 190 -245 447 -304 658 -63 226 -88 406 -90 657 -5 653
-257 1277 730 1735 313 303 669 503 1099 618 247 66 582 92 845 67z"/>
-                <path fill="white" d="M5057 4960 c-431 -76 -786 -251 -1086 -536 -279 -266 -471 -586 -565
+257 1277 730 1735 313 303 669 503 1099 618 247 66 582 92 845 67z" fill="white"/>
+                <path d="M5057 4960 c-431 -76 -786 -251 -1086 -536 -279 -266 -471 -586 -565
 -944 -51 -195 -60 -270 -60 -515 0 -209 2 -242 27 -367 31 -160 62 -259 122
 -404 204 -488 623 -899 1111 -1092 639 -254 1346 -181 1909 196 486 326 805
 839 881 1416 22 164 15 456 -15 611 -74 395 -252 738 -530 1027 -275 286 -586
@@ -107,7 +115,7 @@ l-122 6 0 386 0 386 113 -113 c62 -61 117 -112 124 -112 6 0 312 298 679 663
 -709 -703 c-391 -386 -839 -831 -997 -987 -159 -157 -288 -290 -288 -296 0 -6
 47 -57 104 -114 58 -58 103 -108 100 -113 -3 -4 -176 -8 -385 -8 l-379 0 0
 380 c0 295 3 380 12 380 7 0 60 -47 118 -105 l106 -106 674 668 c371 367 821
-813 1000 990 179 178 327 323 330 323 3 0 75 -70 160 -155z"/>
+813 1000 990 179 178 327 323 330 323 3 0 75 -70 160 -155z" fill="white"/>
             </g>
         </svg>
         Three Arrows (Minus One)
@@ -115,10 +123,10 @@ l-122 6 0 386 0 386 113 -113 c62 -61 117 -112 124 -112 6 0 312 298 679 663
 </a><br><a href="https://en.wikipedia.org/wiki/Non-binary">
     <button class="btn white">
         <svg viewBox="0 0 540 390" xmlns="http://www.w3.org/2000/svg">
-            <rect width="540" height="195" rx="66" fill="#FFF42F"/>
-            <rect y="195" width="540" height="195" rx="66" fill="#292929"/>
-            <rect y="97.5" width="540" height="97.5" rx="0" fill="#fff"/>
-            <rect y="195" width="540" height="97.5" rx="0" fill="#9c59d1"/>
+            <rect fill="#FFF42F" height="195" rx="66" width="540"/>
+            <rect fill="#292929" height="195" rx="66" width="540" y="195"/>
+            <rect fill="#fff" height="97.5" rx="0" width="540" y="97.5"/>
+            <rect fill="#9c59d1" height="97.5" rx="0" width="540" y="195"/>
         </svg>
         Nonbinary Pride Flag
     </button>
