--- a/discord/index.html
+++ b/discord/index.html
@@ -16,7 +16,7 @@
     <a href="https://discord.com/users/406481120641810433">
         <button class="btn white">
             <img alt=""
-                 src="https://simpleicons.org/icons/discord.svg">
+                 class="invert" src="/thumbnails/discord.svg">
             My Discord is <code>allyce.</code>
         </button>
     </a>
