--- a/gpg/index.html
+++ b/gpg/index.html
@@ -2,22 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="GPG Key"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image"
-          content="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/GnuPG-Logo.svg/1920px-GnuPG-Logo.svg.png"/>
-    <meta property="og:url" content="https://allytoall.github.io/gpg"/>
-    <meta property="og:description" content="Allyce's GPG Key"/>
+    <meta content="GPG Key" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/GnuPG-Logo.svg/1920px-GnuPG-Logo.svg.png"
+          property="og:image"/>
+    <meta content="https://allytoall.github.io/gpg" property="og:url"/>
+    <meta content="Allyce's GPG Key" property="og:description"/>
     <title>allytoall@protonmail.com</title>
-    <link rel="stylesheet" href="/output.css">
+    <link href="/output.css" rel="stylesheet">
     <script src="/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
     <a class="title">
-        <img alt="" src="https://simpleicons.org/icons/gnuprivacyguard.svg">
         GnuPG Public Key
-    </a>
+    </a><br>
     <a href="https://github.com/AllyToAll/AllyToAll.github.io/blob/main/publickey.asc">
         <button class="btn green">
             View
