--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Allyce's Website"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://allytoall.github.io/thumbnails/index.png"/>
-    <meta property="og:url" content="https://allytoall.github.io/"/>
-    <meta property="og:description" content="Allyce's Silly Little Website :3"/>
+    <meta content="Allyce's Website" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+    <meta content="https://allytoall.github.io/" property="og:url"/>
+    <meta content="Allyce's Silly Little Website :3" property="og:description"/>
     <title>Allyce</title>
-    <link rel="stylesheet" href="/output.css">
+    <link href="/output.css" rel="stylesheet">
     <script src="/urlHandling.js"></script>
 </head>
 <body class="background">
@@ -22,12 +22,12 @@
         </button>
     </a><br><a href="https://en.pronouns.page/@Allyce">
     <button class="btn pronoun">
-        <img alt="" src="https://simpleicons.org/icons/pronounsdotpage.svg"> Pronouns
+        <img alt="" class="invert" src="/thumbnails/pronounsdotpage.svg"> Pronouns
     </button>
 </a><br><a href="/links">
     <button class="btn white">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-link"
-             viewBox="0 0 16 16">
+        <svg class="bi bi-link" fill="currentColor" height="16" viewBox="0 0 16 16" width="16"
+             xmlns="http://www.w3.org/2000/svg">
             <path d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9q-.13 0-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z"/>
             <path d="M9 5.5a3 3 0 0 0-2.83 4h1.098A2 2 0 0 1 9 6.5h3a2 2 0 1 1 0 4h-1.535a4 4 0 0 1-.82 1H12a3 3 0 1 0 0-6z"/>
         </svg>
@@ -35,16 +35,15 @@
     </button>
 </a><br><a href="/games">
     <button class="btn white">
-        <img src="/thumbnails/controller.png" alt=""> Games
+        <img alt="" class="invert" src="/thumbnails/controller.png"> Games
     </button>
 </a><br><a href="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">
     <button class="btn blahaj">
-        <img alt="" src="https://allytoall.github.io/thumbnails/Blobhaj_Default.png"> Blåhaj
+        <img alt="" src="/thumbnails/Blobhaj_Default.svg"> Blåhaj
     </button>
 </a><br><a href="/discord">
     <button class="btn discord">
-        <img alt=""
-             src="https://simpleicons.org/icons/discord.svg">
+        <img alt="" class="invert" src="/thumbnails/discord.svg">
         Discord
     </button>
 </a><br><a href="/quotes">
@@ -54,12 +53,12 @@
 </a><br><a href="/gpg">
     <button class="btn gpg">
         <img alt=""
-             src="https://simpleicons.org/icons/gnuprivacyguard.svg">
+             class="invert" src="/thumbnails/gnuprivacyguard.svg">
         GnuPG Public Key
     </button>
 </a><br><a href="https://github.com/AllyToAll/AllyToAll.github.io">
     <button class="btn github">
-        <img alt="" src="https://simpleicons.org/icons/github.svg">
+        <img alt="" class="invert" src="/thumbnails/github.svg">
         Website's GitHub Repository
     </button>
 </a>
