--- a/links/index.html
+++ b/links/index.html
@@ -2,75 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Links"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://allytoall.github.io/thumbnails/links.png"/>
-    <meta property="og:url" content="https://allytoall.github.io/links"/>
-    <meta property="og:description" content="Allyce's Links"/>
+    <meta content="Links" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="https://allytoall.github.io/thumbnails/links.png" property="og:image"/>
+    <meta content="https://allytoall.github.io/links" property="og:url"/>
+    <meta content="Allyce's Links" property="og:description"/>
     <title>Links</title>
-    <link rel="stylesheet" href="/output.css">
+    <link href="/output.css" rel="stylesheet">
     <script src="/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
     <a href="https://onlyfans.com/allyce.xoxox">
         <button class="btn onlyfans">
-            <img src="https://simpleicons.org/icons/onlyfans.svg" alt="">
+            <img alt="" class="invert" src="https://simpleicons.org/icons/onlyfans.svg">
             OnlyFans
         </button>
     </a><br><br><a href="https://bsky.app/profile/allyce1.bsky.social">
     <button class="btn bluesky">
-        <img src="https://simpleicons.org/icons/bluesky.svg" alt="">
+        <img alt="" class="invert" src="https://simpleicons.org/icons/bluesky.svg">
         Bluesky
     </button>
 </a><a href="https://github.com/AllyToAll">
     <button class="btn github">
-        <img src="https://simpleicons.org/icons/github.svg" alt="">
+        <img alt="" class="invert" src="https://simpleicons.org/icons/github.svg">
         GitHub
     </button>
 </a><a href="https://it.pinterest.com/allytoall">
     <button class="btn pinterest">
-        <img src="https://simpleicons.org/icons/pinterest.svg" alt="">
+        <img alt="" class="invert" src="https://simpleicons.org/icons/pinterest.svg">
         Pinterest
     </button>
 </a><a href="https://www.reddit.com/u/Allyce3642">
     <button class="btn reddit">
-        <img src="https://simpleicons.org/icons/reddit.svg" alt="">
+        <img alt="" class="invert" src="https://simpleicons.org/icons/reddit.svg">
         Reddit
     </button>
 </a><a href="https://signal.me/#eu/T56AHc1JKr4oTX8Y66D8ELfZX_SgwNM2aYjM0735WXMVpumgYLpGzZvSO-ru_PqO">
     <button class="btn signal">
-        <img src="https://simpleicons.org/icons/signal.svg" alt="">
+        <img alt="" class="invert" src="https://simpleicons.org/icons/signal.svg">
         Signal
     </button>
 </a><a href="https://allyce3642.tumblr.com">
     <button class="btn tumblr">
-        <img src="https://simpleicons.org/icons/tumblr.svg" alt="">
+        <img alt="" class="invert" src="https://simpleicons.org/icons/tumblr.svg">
         Tumblr
     </button>
 </a><a href="https://twitch.tv/allyce3642">
     <button class="btn twitch">
-        <img src="https://simpleicons.org/icons/twitch.svg" alt="">
+        <img alt="" class="invert" src="https://simpleicons.org/icons/twitch.svg">
         Twitch
     </button>
 </a><a href="https://www.youtube.com/@allyce3642">
     <button class="btn youtube">
-        <img src="https://simpleicons.org/icons/youtube.svg" alt="">
+        <img alt="" class="invert" src="https://simpleicons.org/icons/youtube.svg">
         YouTube
     </button>
 </a><a href="https://www.xiaohongshu.com/user/profile/678846fd0000000008019588">
     <button class="btn xhs">
-        <img src="https://simpleicons.org/icons/xiaohongshu.svg" alt="">
+        <img alt="" class="invert" src="https://simpleicons.org/icons/xiaohongshu.svg">
         Xiaohongshu
     </button>
 </a><a href="https://girldick.gay/@Allyce">
     <button class="btn mastodon">
-        <img src="https://simpleicons.org/icons/mastodon.svg" alt="">
+        <img alt="" class="invert" src="https://simpleicons.org/icons/mastodon.svg">
         Mastodon
     </button>
 </a><br><br>
     <div class="btn activision">
-        <img src="https://simpleicons.org/icons/activision.svg" alt="">
+        <img alt="" class="invert" src="https://simpleicons.org/icons/activision.svg">
         Activision / Call of Duty - <code>Allyce#1744697</code><br>
     </div>
     <div class="btn starbreeze">
