More local files vs CDN

--- a/links/index.html
+++ b/links/index.html
@@ -15,62 +15,62 @@
 <div class="input">
     <a href="https://onlyfans.com/allyce.xoxox">
         <button class="btn onlyfans">
-            <img alt="" class="invert" src="https://simpleicons.org/icons/onlyfans.svg">
+            <img alt="" class="invert" src="/thumbnails/onlyfans.svg">
             OnlyFans
         </button>
     </a><br><br><a href="https://bsky.app/profile/allyce1.bsky.social">
     <button class="btn bluesky">
-        <img alt="" class="invert" src="https://simpleicons.org/icons/bluesky.svg">
+        <img alt="" class="invert" src="/thumbnails/bluesky.svg">
         Bluesky
     </button>
 </a><a href="https://github.com/AllyToAll">
     <button class="btn github">
-        <img alt="" class="invert" src="https://simpleicons.org/icons/github.svg">
+        <img alt="" class="invert" src="/thumbnails/github.svg">
         GitHub
     </button>
 </a><a href="https://it.pinterest.com/allytoall">
     <button class="btn pinterest">
-        <img alt="" class="invert" src="https://simpleicons.org/icons/pinterest.svg">
+        <img alt="" class="invert" src="/thumbnails/pinterest.svg">
         Pinterest
     </button>
 </a><a href="https://www.reddit.com/u/Allyce3642">
     <button class="btn reddit">
-        <img alt="" class="invert" src="https://simpleicons.org/icons/reddit.svg">
+        <img alt="" class="invert" src="/thumbnails/reddit.svg">
         Reddit
     </button>
 </a><a href="https://signal.me/#eu/T56AHc1JKr4oTX8Y66D8ELfZX_SgwNM2aYjM0735WXMVpumgYLpGzZvSO-ru_PqO">
     <button class="btn signal">
-        <img alt="" class="invert" src="https://simpleicons.org/icons/signal.svg">
+        <img alt="" class="invert" src="/thumbnails/signal.svg">
         Signal
     </button>
 </a><a href="https://allyce3642.tumblr.com">
     <button class="btn tumblr">
-        <img alt="" class="invert" src="https://simpleicons.org/icons/tumblr.svg">
+        <img alt="" class="invert" src="/thumbnails/tumblr.svg">
         Tumblr
     </button>
 </a><a href="https://twitch.tv/allyce3642">
     <button class="btn twitch">
-        <img alt="" class="invert" src="https://simpleicons.org/icons/twitch.svg">
+        <img alt="" class="invert" src="/thumbnails/twitch.svg">
         Twitch
     </button>
 </a><a href="https://www.youtube.com/@allyce3642">
     <button class="btn youtube">
-        <img alt="" class="invert" src="https://simpleicons.org/icons/youtube.svg">
+        <img alt="" class="invert" src="/thumbnails/youtube.svg">
         YouTube
     </button>
 </a><a href="https://www.xiaohongshu.com/user/profile/678846fd0000000008019588">
     <button class="btn xhs">
-        <img alt="" class="invert" src="https://simpleicons.org/icons/xiaohongshu.svg">
+        <img alt="" class="invert" src="/thumbnails/xiaohongshu.svg">
         Xiaohongshu
     </button>
 </a><a href="https://girldick.gay/@Allyce">
     <button class="btn mastodon">
-        <img alt="" class="invert" src="https://simpleicons.org/icons/mastodon.svg">
+        <img alt="" class="invert" src="/thumbnails/mastodon.svg">
         Mastodon
     </button>
 </a><br><br>
     <div class="btn activision">
-        <img alt="" class="invert" src="https://simpleicons.org/icons/activision.svg">
+        <img alt="" class="invert" src="/thumbnails/activision.svg">
         Activision / Call of Duty - <code>Allyce#1744697</code><br>
     </div>
     <div class="btn starbreeze">
