Improve CREDITS.md

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -90,31 +90,7 @@
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Three_Arrows">
     <button class="btn white">
-        <svg class="invert" preserveAspectRatio="xMidYMid meet" viewBox="236.5 0 607 607"
-             xmlns="http://www.w3.org/2000/svg">
-            <rect fill="black" height="607" width="607" x="236.5" y="0"/>
-            <g transform="translate(0,607) scale(0.1,-0.1)">
-                <path d="M0 3035 l0 -3035 5400 0 5400 0 0 3035 0 3035 -5400 0 -5400 0 0
--3035z m5605 2345 c570 -56 1079 -290 1483 -685 293 -285 493 -604 617 -983
-89 -269 120 -497 112 -811 -7 -312 -55 -550 -167 -833 -267 -674 -872 -1219
--1578 -1423 -261 -75 -386 -90 -722 -90 -220 1 -273 4 -383 24 -687 121 -1263
-496 -1642 1066 -126 190 -245 447 -304 658 -63 226 -88 406 -90 657 -5 653
-257 1277 730 1735 313 303 669 503 1099 618 247 66 582 92 845 67z" fill="white"/>
-                <path d="M5057 4960 c-431 -76 -786 -251 -1086 -536 -279 -266 -471 -586 -565
--944 -51 -195 -60 -270 -60 -515 0 -209 2 -242 27 -367 31 -160 62 -259 122
--404 204 -488 623 -899 1111 -1092 639 -254 1346 -181 1909 196 486 326 805
-839 881 1416 22 164 15 456 -15 611 -74 395 -252 738 -530 1027 -275 286 -586
-470 -954 564 -194 49 -252 56 -497 60 -197 3 -252 0 -343 -16z m1102 -413 c83
--82 151 -152 151 -156 0 -4 -91 -97 -202 -207 -905 -893 -1788 -1772 -1788
--1781 0 -6 49 -57 110 -114 60 -57 110 -107 110 -111 0 -10 -491 -10 -658 -1
-l-122 6 0 386 0 386 113 -113 c62 -61 117 -112 124 -112 6 0 312 298 679 663
-1176 1166 1319 1306 1326 1304 4 -1 74 -69 157 -150z m811 -802 l154 -154
--709 -703 c-391 -386 -839 -831 -997 -987 -159 -157 -288 -290 -288 -296 0 -6
-47 -57 104 -114 58 -58 103 -108 100 -113 -3 -4 -176 -8 -385 -8 l-379 0 0
-380 c0 295 3 380 12 380 7 0 60 -47 118 -105 l106 -106 674 668 c371 367 821
-813 1000 990 179 178 327 323 330 323 3 0 75 -70 160 -155z" fill="white"/>
-            </g>
-        </svg>
+        <img alt="" class="invert" src="/thumbnails/Two_Arrows.svg"/>
         Three Arrows (Minus One)
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Non-binary">
