URL to licence + credits

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
         <img alt="" class="invert" src="/thumbnails/github.svg">
         Website's GitHub Repository
     </button>
+</a><br><a href="https://github.com/AllyToAll/AllyToAll.github.io/blob/main/LICENSE">
+    <button class="btn gray">
+        Licence
+    </button>
+</a><br><a href="https://github.com/AllyToAll/AllyToAll.github.io/blob/main/CREDITS.md">
+    <button class="btn gray">
+        Credits
+    </button>
 </a>
 </div>
 </body>
