Better CREDITS.md

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -95,12 +95,7 @@
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Non-binary">
     <button class="btn white">
-        <svg viewBox="0 0 540 390" xmlns="http://www.w3.org/2000/svg">
-            <rect fill="#FFF42F" height="195" rx="66" width="540"/>
-            <rect fill="#292929" height="195" rx="66" width="540" y="195"/>
-            <rect fill="#fff" height="97.5" rx="0" width="540" y="97.5"/>
-            <rect fill="#9c59d1" height="97.5" rx="0" width="540" y="195"/>
-        </svg>
+        <img alt="MOREmoji Nonbinary" src="/thumbnails/MOREmoji_nonbinary.svg"/>
         Nonbinary Pride Flag
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Anarchist_symbolism#Black_flag">
