Repackage Quotes into Likes

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <img alt="" class="invert" src="/thumbnails/discord.svg">
         Discord
     </button>
-</a><br><a href="/quotes">
+</a><br><a href="/likes">
     <button class="btn white">
-        Quotes
+        Things I liked
     </button>
 </a><br><a href="/gpg">
     <button class="btn gpg">
