--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -108,6 +108,7 @@
 </a><br><br>
     <p>
         <b>Cool facts</b>
+        <br>I am atheist
         <br>I own a <a href="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">blåhaj</a> 🦈 (IKEA blue
         shark plush toy)
         <br>My favourite dinosaur is the Ankylosaurus 🦖
