Improve CREDITS.md

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -100,9 +100,7 @@
     </button>
 </a><br><a href="https://en.wikipedia.org/wiki/Anarchist_symbolism#Black_flag">
     <button class="btn white">
-        <svg viewBox="0 0 3 2" xmlns="http://www.w3.org/2000/svg">
-            <path d="m3 0v2H0"/>
-        </svg>
+        <img alt="" src="/thumbnails/anarchy.svg">
         Anarchist Bisected Flag
     </button>
 </a><br><br>
