Change meta image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="Allyce's Website" property="og:title"/>
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+    <meta content="/thumbnails/index.png" property="og:image"/>
     <meta content="https://allytoall.github.io/" property="og:url"/>
     <meta content="Allyce's Silly Little Website :3" property="og:description"/>
     <title>Allyce</title>
