--- a/links/index.html
+++ b/links/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="Links" property="og:title"/>
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/links.png" property="og:image"/>
+    <meta content="/thumbnails/links.png" property="og:image"/>
     <meta content="https://allytoall.github.io/links" property="og:url"/>
     <meta content="Allyce's Links" property="og:description"/>
     <title>Links</title>
