--- a/studies/index.html
+++ b/studies/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Studies"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://allytoall.github.io/thumbnails/studies.png"/>
-    <meta property="og:url" content="https://allytoall.github.io/studies"/>
-    <meta property="og:description"
-          content="A page containing a bunch of studies"/>
+    <meta content="Studies" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="/thumbnails/studies.png" property="og:image"/>
+    <meta content="https://allytoall.github.io/studies" property="og:url"/>
+    <meta content="A page containing a bunch of studies"
+          property="og:description"/>
     <title>Studies</title>
-    <link rel="stylesheet" href="/output.css">
+    <link href="/output.css" rel="stylesheet">
     <script src="/urlHandling.js"></script>
     <style>
         a {
