--- a/blahaj/index.html
+++ b/blahaj/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="Blahaj" property="og:title"/>
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/Blobhaj_Default.png" property="og:image"/>
+    <meta content="/thumbnails/Blobhaj_Default.svg" property="og:image"/>
     <meta content="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" property="og:url"/>
     <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
           property="og:description"/>
