--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Source Code"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://allytoall.github.io/thumbnails/source.png"/>
-    <meta property="og:url" content="https://github.com/AllyToAll/AllyToAll.github.io"/>
-    <meta property="og:description"
-          content="Website's source code This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io"/>
-    <meta http-equiv="refresh" content="0; url=https://github.com/AllyToAll/AllyToAll.github.io">
+    <meta content="Source Code" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content=/thumbnails/index.png"/ property="og:image">
+    <meta content="https://github.com/AllyToAll/AllyToAll.github.io" property="og:url"/>
+    <meta content="Website's source code This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io"
+          property="og:description"/>
+    <meta content="0; url=https://github.com/AllyToAll/AllyToAll.github.io" http-equiv="refresh">
     <title>Redirecting...</title>
 </head>
 <body>
