--- a/games/index.html
+++ b/games/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="Games" property="og:title"/>
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/controller.png" property="og:image"/>
+    <meta content="/thumbnails/controller.png" property="og:image"/>
     <meta content="https://allytoall.github.io/games" property="og:url"/>
     <meta content="Allyce's Games" property="og:description"/>
     <title>Games</title>
