--- a/likes/index.html
+++ b/likes/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="Quotes" property="og:title"/>
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+    <meta content="/thumbnails/index.png" property="og:image"/>
     <meta content="https://allytoall.github.io/quotes" property="og:url"/>
     <meta content="Quotes I like :3" property="og:description"/>
     <title>Quotes</title>
