Make pronounpage iframe

--- a/pronouns/index.html
+++ b/pronouns/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Pronouns"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://en.pronouns.page/logo/logo-primary.svg"/>
-    <meta property="og:url" content="https://allytoall.github.io/pronouns"/>
-    <meta property="og:description"
-          content="Allyce's Pronoun Page This is a redirect to https://en.pronouns.page/@Allyce"/>
-    <meta http-equiv="refresh" content="0; url=https://en.pronouns.page/@Allyce">
-    <title>Redirecting...</title>
+    <meta content="Pronouns" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="/thumbnails/pronounsdotpage.svg" property="og:image"/>
+    <meta content="https://allytoall.github.io/pronouns" property="og:url"/>
+    <meta content="Allyce's Pronoun Page"
+          property="og:description"/>
+    <title>Pronoun Page</title>
 </head>
 <body>
-<p>This is a redirect to https://en.pronouns.page/@Allyce<br>
-    If you are not redirected automatically, <a href="https://en.pronouns.page/@Allyce">click here</a>.</p>
+<iframe loading="lazy" referrerpolicy="no-referrer" src="https://en.pronouns.page/card/@Allyce"
+        style="border:0; width:100%; height:100vh">
+    <a href="https://en.pronouns.page/@Allyce" rel="noopener" target="_blank">
+        @Allyce
+    </a>
+</iframe>
 </body>
 </html>
