Make pronounpage iframe

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="btn white">
             About me
         </button>
-    </a><br><a href="https://en.pronouns.page/@Allyce">
+    </a><br><a href="/pronouns">
     <button class="btn pronoun">
         <img alt="" class="invert" src="/thumbnails/pronounsdotpage.svg"> Pronouns
     </button>
