Make pronounpage iframe

--- a/pronouns/index.html
+++ b/pronouns/index.html
@@ -9,6 +9,7 @@
     <meta content="Allyce's Pronoun Page"
           property="og:description"/>
     <title>Pronoun Page</title>
+    <script src="/urlHandling.js"></script>
 </head>
 <body>
 <iframe loading="lazy" referrerpolicy="no-referrer" src="https://en.pronouns.page/card/@Allyce"
