Change CSS style for APCS and Pronouns Change og image style to reflect the fact it needs full urls

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="Source Code" property="og:title"/>
     <meta content="website" property="og:type"/>
-    <meta content=/thumbnails/index.png"/ property="og:image">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image">
     <meta content="https://github.com/AllyToAll/AllyToAll.github.io" property="og:url"/>
     <meta content="Website's source code This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io"
           property="og:description"/>
