--- a/discord/index.html
+++ b/discord/index.html
@@ -5,7 +5,7 @@
     <meta content="Discord" property="og:title"/>
     <meta content="website" property="og:type"/>
     <meta content="https://discord.com/users/406481120641810433" property="og:url"/>
-    <meta content="/thumbnails/discord.svg" property="og:image"/>
+    <meta content="https://allytoall.github.io/thumbnails/discord.svg" property="og:image"/>
     <meta content="Allyce's Discord Profile" property="og:description"/>
     <title>Discord</title>
     <link href="/output.css" rel="stylesheet">
