--- a/gpg/index.html
+++ b/gpg/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="GPG Key" property="og:title"/>
     <meta content="website" property="og:type"/>
-    <meta content="/thumbnails/gnuprivacyguard.svg"
+    <meta content="https://allytoall.github.io/thumbnails/gnuprivacyguard.svg"
           property="og:image"/>
     <meta content="https://allytoall.github.io/gpg" property="og:url"/>
     <meta content="Allyce's GPG Key" property="og:description"/>
