--- a/apcs/index.html
+++ b/apcs/index.html
@@ -2,33 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="Allyce's Power Corp Scraper"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://allytoall.github.io/thumbnails/index.png"/>
-    <meta property="og:url" content="https://allytoall.github.io/"/>
-    <meta property="og:description" content="Allyce's Power Corp Scraper visual example"/>
+    <meta content="Allyce's Power Corp Scraper" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+    <meta content="https://allytoall.github.io/" property="og:url"/>
+    <meta content="Allyce's Power Corp Scraper visual example" property="og:description"/>
     <title>Allyce</title>
-    <link rel="stylesheet" href="/output.css">
+    <link href="/output.css" rel="stylesheet">
     <script src="/urlHandling.js"></script>
 </head>
 <body class="background">
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMe71TDHVfoAIVikX0W5E4Tk1OJScFCCfb27fqd3i__VF1whXuReAHX_yHJRdSezvCC4XU0rZ0g-e7/pubhtml?widget=true&amp;headers=false"
-        style="position: absolute; top:0; left:0; width:100%; height:90%; border:0;"></iframe>
-<div style="
-        position: absolute;
-        bottom: 20px;
-        left: 50%;
-        transform: translateX(-50%);
-        display: flex;
-        gap: 20px;
-    ">
-    <a href="/">
-        <button class="btn gray">To Allyce's Website</button>
-    </a>
-
-    <a href="https://github.com/AllyToAll/AllycePowerCorpScraper">
-        <button class="btn gray">To AllycePowerCorpScraper</button>
-    </a>
+<div class="flex flex-col h-screen w-full">
+    <iframe
+            class="h-[90%] w-full border-0"
+            loading="lazy"
+            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMe71TDHVfoAIVikX0W5E4Tk1OJScFCCfb27fqd3i__VF1whXuReAHX_yHJRdSezvCC4XU0rZ0g-e7/pubhtml?widget=true&headers=false">
+    </iframe>
+    <div class="h-[10%] flex items-center justify-center gap-6">
+        <a href="/">
+            <button class="btn gray">To Allyce's Website</button>
+        </a>
+        <a href="https://github.com/AllyToAll/AllycePowerCorpScraper">
+            <button class="btn gray">To AllycePowerCorpScraper</button>
+        </a>
+    </div>
 </div>
 </body>
 </html>
