--- a/studies/index.html
+++ b/studies/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="Studies" property="og:title"/>
     <meta content="website" property="og:type"/>
-    <meta content="/thumbnails/studies.png" property="og:image"/>
+    <meta content="https://allytoall.github.io/thumbnails/studies.png" property="og:image"/>
     <meta content="https://allytoall.github.io/studies" property="og:url"/>
     <meta content="A page containing a bunch of studies"
           property="og:description"/>
