--- a/apcs/index.html
+++ b/apcs/index.html
@@ -11,21 +11,26 @@
     <link href="/output.css" rel="stylesheet">
     <script src="/urlHandling.js"></script>
 </head>
-<body class="background">
-<div class="flex flex-col h-screen w-full">
-    <iframe
-            class="h-[90%] w-full border-0"
-            loading="lazy"
-            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMe71TDHVfoAIVikX0W5E4Tk1OJScFCCfb27fqd3i__VF1whXuReAHX_yHJRdSezvCC4XU0rZ0g-e7/pubhtml?widget=true&headers=false">
-    </iframe>
-    <div class="h-[10%] flex items-center justify-center gap-6">
-        <a href="/">
-            <button class="btn gray">To Allyce's Website</button>
-        </a>
-        <a href="https://github.com/AllyToAll/AllycePowerCorpScraper">
-            <button class="btn gray">To AllycePowerCorpScraper</button>
-        </a>
-    </div>
+<body class="background relative" style="height:100vh; width:100vw; margin:0;">
+<iframe
+        loading="lazy"
+        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMe71TDHVfoAIVikX0W5E4Tk1OJScFCCfb27fqd3i__VF1whXuReAHX_yHJRdSezvCC4XU0rZ0g-e7/pubhtml?widget=true&headers=false"
+        style="position:absolute; inset:0; width:100%; height:90%; border:0;">
+</iframe>
+<div style="
+    position:absolute;
+    left:50%;
+    bottom:20px;
+    transform:translateX(-50%);
+    display:flex;
+    gap:20px;
+    z-index:10;">
+    <a href="/">
+        <button class="btn gray">To Allyce's Website</button>
+    </a>
+    <a href="https://github.com/AllyToAll/AllycePowerCorpScraper">
+        <button class="btn gray">To AllycePowerCorpScraper</button>
+    </a>
 </div>
 </body>
 </html>
