--- a/pronouns/index.html
+++ b/pronouns/index.html
@@ -11,20 +11,25 @@
     <link href="/output.css" rel="stylesheet">
     <script src="/urlHandling.js"></script>
 </head>
-<body class="background">
-<div class="flex flex-col h-screen w-full">
-    <iframe
-            class="h-[90%] w-full border-0"
-            loading="lazy"
-            referrerpolicy="no-referrer"
-            src="https://en.pronouns.page/card/@Allyce">
-    </iframe>
-
-    <div class="h-[10%] flex items-center justify-center">
-        <a href="/">
-            <button class="btn gray">Return</button>
-        </a>
-    </div>
+<body class="background relative" style="height:100vh; width:100vw; margin:0;">
+<iframe
+        loading="lazy"
+        referrerpolicy="no-referrer"
+        src="https://en.pronouns.page/card/@Allyce"
+        style="position:absolute; top:0; left:0; width:100%; height:90%; border:0;">
+    <a href="https://en.pronouns.page/@Allyce" rel="noopener" target="_blank">@Allyce</a>
+</iframe>
+<div style="
+    position:absolute;
+    left:50%;
+    bottom:20px;
+    transform:translateX(-50%);
+    display:flex;
+    gap:20px;
+    z-index:10;">
+    <a href="/">
+        <button class="btn gray">Return</button>
+    </a>
 </div>
 </body>
 </html>
