--- a/pronouns/index.html
+++ b/pronouns/index.html
@@ -11,22 +11,14 @@
     <link href="/output.css" rel="stylesheet">
     <script src="/urlHandling.js"></script>
 </head>
-<body class="background relative" style="height:100vh; width:100vw; margin:0;">
+<body class="page">
 <iframe
+        class="page-iframe"
         loading="lazy"
         referrerpolicy="no-referrer"
-        src="https://en.pronouns.page/card/@Allyce"
-        style="position:absolute; top:0; left:0; width:100%; height:90%; border:0;">
-    <a href="https://en.pronouns.page/@Allyce" rel="noopener" target="_blank">@Allyce</a>
+        src="https://en.pronouns.page/card/@Allyce">
 </iframe>
-<div style="
-    position:absolute;
-    left:50%;
-    bottom:20px;
-    transform:translateX(-50%);
-    display:flex;
-    gap:20px;
-    z-index:10;">
+<div class="page-footer">
     <a href="/">
         <button class="btn gray">Return</button>
     </a>
